chrome-type-ahead (0.2.1) unstable; urgency=low

  * Fix box position (consider window's offset)

 --  <tokland@gmail.com>  Sat, 02 Jan 2010 23:03:11 +0100

chrome-type-ahead (0.2) unstable; urgency=low

  * Fix propagation in blacklisted sites 
  * Fix search mode selection

 --  <tokland@gmail.com>  Sat, 02 Jan 2010 20:17:54 +0100

chrome-type-ahead (0.1.2) unstable; urgency=low

  * Add option: starts_only_links
  * Consider also 'visibility: hidden' CSS as non-matchable elements 
  * Do not start search on element with 'contenteditable' attribute enabled
  * Add sites blacklist
  * Add alternative / to start primary mode (but only way for blacklisted sites)

 --  <tokland@gmail.com>  Thu, 31 Dec 2009 20:26:52 +0100

chrome-type-ahead (0.1.1) unstable; urgency=low

  * Add option to enable/disable search in select/options 

 --  <tokland@gmail.com>  Wed, 30 Dec 2009 20:58:42 +0100

chrome-type-ahead (0.1) unstable; urgency=low

  * First upload to official site

 --  <tokland@gmail.com>  Wed, 30 Dec 2009 15:36:34 +0100

chrome-type-ahead (0.0.9) unstable; urgency=low

  * Set manually document.activeElement
  * Add Alt+n/p to switch matches

 --  <tokland@gmail.com>  Tue, 29 Dec 2009 01:20:44 +0100

chrome-type-ahead (0.0.8) unstable; urgency=low

  * Fire onchange events when option select is activated (enter key)

 --  <tokland@gmail.com>  Fri, 25 Dec 2009 20:34:30 +0100

chrome-type-ahead (0.0.7) unstable; urgency=low

  * Search in frames

 --  <tokland@gmail.com>  Fri, 25 Dec 2009 01:09:00 +0100

chrome-type-ahead (0.0.6) unstable; urgency=low

  * F3/Control+G to search next
  * F4 to switch modes 

 --  <tokland@gmail.com>  Mon, 21 Dec 2009 21:14:11 +0100

chrome-type-ahead (0.0.5) unstable; urgency=low

  * Search text inside select options 
  * Refactor styles

 --  <tokland@gmail.com>  Sun, 20 Dec 2009 14:29:41 +0100

chrome-type-ahead (0.0.4) unstable; urgency=low

  * Fix text search

 --  <tokland@gmail.com>  Sat, 19 Dec 2009 22:51:14 +0100
